# scrapping

./: pyproject.toml
scrapping/: Dockerfile
scrapping/data/: companies-ulr-1000.csv  companies-url.csv
scrapping/httpx-lib/: httpx-lib.py  httpz-2.py
scrapping/playwright-lib/: __init__.py  data.py  playwright-lib.py
scrapping/requests-lib/: request-single.py  requests-lib.py
scrapping/requst-html-lib/: request-html-lib.py
scrapping/utils/: __init__.py  urls.py
tests/: test_urls.py
