[tool.poetry]
name = "scrapping"
version = "0.1.0"
description = ""
authors = ["Jahel <jleonro@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.2"
requests-html = "^0.10.0"
playwright = "^1.39.0"
pytest-playwright = "^0.4.3"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
